--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
-    
+    <meta name="google-site-verification" content="SLk-keLdi7rq28tcsVDcVefEVQpy3RMt2UABs2iqIb0" />
     <!-- ✅ Poppins Google Font added here -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
